# latentpool

./: .env.example  .gitignore  README.md  coverage.json  env.example  justfile  main.py  pyproject.toml  results.sarif  worklog.md
.github/workflows/: bandit.yml
docs/: data-engineering.md  dvc-huggingface.md  hydratation.md  silver-viz.md
docs/training/: genesis.md  sage-v2.md
img/: logo.avif  logo.heic
src/latentpool/: cli.py  gnn.py  provider.py  train.py
src/latentpool/configs/: data_config.py
src/latentpool/data/: data_assembler.py  labeler.py  processing.py  schema.py
src/latentpool/data/ingestion/: archive_client.py  coordinator.py  hydrator.py  sanity_check.py
src/latentpool/data/transformation/: parquet_exporter.py
src/latentpool/data/visualization/: dashboard.py  explorer.py  gold_summary.py
src/latentpool/data/visualization/gold/: balance.py  complexity.py  tensor_health.py
src/latentpool/data/visualization/silver/: feature_health.py  graph_structure.py  node_diversity.py  path_depth.py  temporal.py
src/latentpool/models/: sage.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_gnn.py  test_provider.py  test_train.py
tests/configs/: test_data_config.py
tests/data/: test_data_assembler.py  test_labeler.py  test_processing.py
tests/data/ingestion/: test_archive_client.py  test_coordinator.py  test_hydrator.py  test_sanity_check.py
tests/data/transformation/: test_parquet_exporter.py
tests/data/visualization/: test_dashboard.py  test_explorer.py  test_gold_summary.py
tests/data/visualization/gold/: test_balance.py  test_complexity.py  test_tensor_health.py
tests/data/visualization/silver/: test_feature_health.py  test_graph_structure.py  test_node_diversity.py  test_path_depth.py  test_temporal.py
tests/models/: test_sage.py
