[project]
name = "latentpool"
version = "0.0.1"
description = "MEV Detection using Graph Neural Networks"
authors = [{name = "Your Name", email = "hirako2000@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.66.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.3.5",
    "matplotlib>=3.10.8",
    "msgspec>=0.20.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "typer>=0.21.1",
    "web3>=7.14.0",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-ruff>=0.5",
    "respx>=0.22.0",
    "ruff>=0.14.14",
]

[project.scripts]
latent = "latentpool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/latentpool"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
addopts = "-ra -v --ruff --cov=src/latentpool --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning:torch_geometric.*",
    "ignore::DeprecationWarning:torch.jit.*",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"] # Ignore line length violations, let's let the formatter handle it
select = [
    "F",   # Pyflakes for Logical errors
    "I",   # isort for import sorting
    "E",   # Pycodestyle Errors
    "W",   # Pycodestyle Warnings
    "B",   # flake8 Bugbear
    "S",   # Bandit for common security patterns
    "PL",  # Deep code smells
    "C4",  # Micro analysis, comprehension
    "C90", # McCabe Complexity - Macro view
    "TID", # Disciplinarian
]

[tool.ruff.lint.mccabe]
max-complexity = 10  # will warns if a function is too "complex" to follow

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # this rule bans asserts
"conftest.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
# uv run pyright, no addopt because it can be slow
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["src", "tests"] 
reportMissingTypeStubs = false


